# ebyroid

./: .clang-format  .editorconfig  .eslintrc.json  .gitignore  CMakeLists.txt  LICENSE  README.md  ebyroid.js  index.js  package-lock.json  package.json  server.js  test.js
lib/: cli_main.js  ebyroid.js  mini_server.js  module_def.js  semaphore.js  server.js  voiceroid.js  wave_object.js
src/: api_adapter.cc  api_adapter.h  api_settings.cc  api_settings.h  ebyroid.cc  ebyroid.h  ebyutil.h  hana.cc  hana.h  module_main.cc  nekobuilder.cc  nekobuilder.h  nekomimi.cc  nekomimi.h
test/: test_run.js
